--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>PokemonDesc</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">{{{content}}}</div>
   </body>
 </html>
